--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
- DATABASE_URL="mysql+pymysql://root:Sruthi.1%40@localhost/clotsync"
+ DATABASE_URL="//database"
  
- GOOGLE_API_KEY = "AIzaSyD9zGvXHtSEPA2pZ7OrWNG56--SgGn9s1o"
+
+ GOOGLE_API_KEY = "//Insert API Key here"
