--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
- DATABASE_URL="//database"
- 
-
- GOOGLE_API_KEY = "//Insert API Key here"
+GOOGLE_API_KEY = "AIzaSyD9zGvXHtSEPA2pZ7OrWNG56--SgGn9s1o"
